--- a/layout/nolayout.html
+++ b/layout/nolayout.html
@@ -13,20 +13,43 @@
 				box-sizing:border-box;	
 			}
 			html,body{
-				margin:0px;
-				padding:0px;
-				background-color:#ededed;	
+				margin:0;
+				padding:0;
 			}
 			.ltr{
+				margin:0;
+				padding:0;
+				width:100%;
+				height:100%;	
+				background-color:#ededed;
+				font-size:1em;
+				line-height:1.5em;
 			}
+			.logo{
+				text-align:center;
+				padding:1em 0;
+				background-color:green;
+			}
+			.logo img{
+				vertical-align:middle;
+				border-radius:2.5em;
+				width:5em;
+
+			}
+			.logo span{
+				font-size:2em;
+				vertical-align:middle;
+			}
+
 
 		</style>
 
 	</head>
-	<body>
-		<div class="ltr">
+	<body class = "ltr">
 			<div class="logo">
-				logo	
+				<img src="../img/avatar.jpg">
+				<span>学习 css 布局</span>
+					
 			</div>
 			<div class="menu">
 				menu	
@@ -41,7 +64,6 @@
 				advertisements	
 			</div>
 
-		</div>
 
 	</body>
 
